<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.tneitzel</groupId>
    <artifactId>remote-method-guesser</artifactId>
    <version>5.1.0</version>
    <packaging>jar</packaging>

    <name>${project.artifactId}</name>
    <description>Java RMI Vulnerability Scanner</description>
    <url>https://github.com/qtc-de/remote-method-guesser</url>

    <licenses>
      <license>
        <name>GPL-v3.0</name>
        <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
      </license>
    </licenses>

    <developers>
       <developer>
         <id>qtc-de</id>
         <name>Tobias Neitzel</name>
         <email>secure@tneitzel.eu</email>
         <url>https://tneitzel.eu/</url>
       </developer>
    </developers>

    <scm>
      <connection>scm:git:git://github.com/qtc-de/remote-method-guesser.git</connection>
      <developerConnection>scm:git:ssh://github.com:qtc-de/remote-method-guesser.git</developerConnection>
      <url>https://github.com/qtc-de/remote-method-guesser/tree/master</url>
    </scm>

    <distributionManagement>
      <snapshotRepository>
        <id>ossrh</id>
        <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
      </snapshotRepository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
          <groupId>eu.tneitzel</groupId>
          <artifactId>argparse4j</artifactId>
          <version>1.3.0</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.2-GA</version>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.2</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-remoting</artifactId>
            <version>2.0.8</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>

        <resources>
          <resource>
            <directory>src</directory>
            <includes>
                <include>config.properties</include>
            </includes>
          </resource>
          <resource>
            <directory>.</directory>
            <includes>
                <include>resources/wordlists/**</include>
                <include>resources/templates/**</include>
                <include>resources/known-endpoints/**</include>
            </includes>
          </resource>
        </resources>

        <plugins>

          <plugin>
              <artifactId>maven-assembly-plugin</artifactId>
              <executions>
                <execution>
                  <phase>package</phase>
                  <goals>
                    <goal>single</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <finalName>rmg-${project.version}</finalName>
                <archive>
                    <manifest>
                        <mainClass>eu.tneitzel.rmg.Starter</mainClass>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                    <manifestEntries>
                        <Built-By>
                            Tobias Neitzel (@qtc_de)
                        </Built-By>
                        <Add-Opens>
                            java.base/java.io
                            java.base/java.lang
                            java.base/java.lang.reflect
                            java.base/jdk.internal.misc
                            java.rmi/java.rmi.server
                            java.rmi/sun.rmi.server
                            java.rmi/sun.rmi.transport
                            java.rmi/sun.rmi.transport.tcp
                        </Add-Opens>
                    </manifestEntries>
                </archive>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
              </configuration>
          </plugin>

          <plugin>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.3.0</version>
              <executions>
                <execution>
                   <id>default-jar</id>
                   <phase>none</phase>
                </execution>
              </executions>
          </plugin>

        </plugins>
    </build>

    <profiles>
      <profile>
        <id>publish</id>

        <build>
           <plugins>
             <plugin>
               <groupId>org.sonatype.plugins</groupId>
               <artifactId>nexus-staging-maven-plugin</artifactId>
               <version>1.6.13</version>
               <extensions>true</extensions>
               <configuration>
                 <serverId>ossrh</serverId>
                 <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                 <autoReleaseAfterClose>true</autoReleaseAfterClose>
               </configuration>
             </plugin>

             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-source-plugin</artifactId>
               <version>3.3.0</version>
               <executions>
                  <execution>
                  <id>attach-sources</id>
                   <goals>
                     <goal>jar-no-fork</goal>
                   </goals>
                 </execution>
               </executions>
             </plugin>

             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-javadoc-plugin</artifactId>
               <version>3.6.3</version>
               <executions>
                 <execution>
                   <id>attach-javadocs</id>
                   <goals>
                     <goal>jar</goal>
                   </goals>
                 </execution>
               </executions>
             </plugin>

             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-gpg-plugin</artifactId>
               <version>3.1.0</version>
               <executions>
                 <execution>
                   <id>sign-artifacts</id>
                   <phase>verify</phase>
                   <goals>
                     <goal>sign</goal>
                   </goals>
                   <configuration>
                     <gpgArguments>
                       <arg>--pinentry-mode</arg>
                       <arg>loopback</arg>
                     </gpgArguments>
                   </configuration>
                 </execution>
               </executions>
             </plugin>

             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.3.0</version>
                 <executions>
                   <execution>
                      <id>default-jar</id>
                      <phase>package</phase>
                   </execution>
                 </executions>
             </plugin>

           </plugins>
         </build>
       </profile>
     </profiles>
</project>
